--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@
         <!-- rating form stays the same -->
         <form class="rating-form">
             <!-- stars... -->
+             <fieldset class="rating" aria-label="Avaliação de 1 a 5 estrelas">
+            <input type="radio" id="star5" name="rating" value="5">
+            <label for="star5" title="5 estrelas">&#9733;</label>
+
+            <input type="radio" id="star4" name="rating" value="4">
+            <label for="star4" title="4 estrelas">&#9733;</label>
+
+            <input type="radio" id="star3" name="rating" value="3">
+            <label for="star3" title="3 estrelas">&#9733;</label>
+
+            <input type="radio" id="star2" name="rating" value="2">
+            <label for="star2" title="2 estrelas">&#9733;</label>
+
+            <input type="radio" id="star1" name="rating" value="1">
+            <label for="star1" title="1 estrela">&#9733;</label>
+          </fieldset>
             <button type="submit" class="primary-button">Enviar</button>
         </form>
         </div>
