changes in timeline card

--- a/index.html
+++ b/index.html
@@ -76,11 +76,8 @@
       <div class="timeline-new__marker timeline-new__marker--in-progress"></div>
       <div class="timeline-new__content timeline-new__content--with-warning">
         <div class="timeline-new__content-main">
-          <p class="timeline-new__status">Em consulta com o setor responsável</p>
+          <p class="timeline-new__status">Em consulta com o setor responsável ⚠️</p>
           <p class="timeline-new__date">24 de setembro de 2024</p>
-        </div>
-        <div class="timeline-new__warning" aria-label="Atenção">
-          ⚠️
         </div>
       </div>
     </li>
