--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
         </button>
       </div>
     </section>
+<!--card de status-->
+<section class="request-status-card">
+  <h2 class="request-status__code">COD 98087</h2>
+
+  <div class="request-status__datetime">
+    <span class="request-status__datetime-icon" aria-hidden="true">📅</span>
+    <p class="request-status__datetime-text">
+      Início em <strong>15 de setembro de 2024, às 15h32</strong>
+    </p>
+  </div>
+
+  <h3 class="request-status__title">Segunda via de Histórico Escolar</h3>
+
+  <p class="request-status__description">
+    Campo de observações com máximo de caracteres.
+  </p>
+
+  <div class="request-status__badge">
+    Em andamento
+  </div>
+</section>
+
 
     <!-- Linha do tempo -->
     <section class="timeline-card">
