change in the new card

--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
         </button>
       </div>
     </section>
+
 <!--card de status-->
 <section class="request-status-card">
-  <h2 class="request-status__code">COD 98087</h2>
+
+  <div class="request-status__top">
+    <h2 class="request-status__code">COD 98087</h2>
+
+    <div class="request-status__badge">
+      Em andamento
+    </div>
+  </div>
 
   <div class="request-status__datetime">
     <span class="request-status__datetime-icon" aria-hidden="true">📅</span>
@@ -59,10 +67,8 @@
     Campo de observações com máximo de caracteres.
   </p>
 
-  <div class="request-status__badge">
-    Em andamento
-  </div>
 </section>
+
 
 
     <!-- Linha do tempo -->
