--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
           <iframe 
       src="https://pucpr--devpucpr.sandbox.my.site.com/PortalCandidato/survey/runtimeApp?invitationId=0KiHa0000008yTd&surveyName=c_pia_de_portal_de_servi_os&UUID=c4f9d519-6d9b-4e47-b0df-069122bbc410"
       width="100%"
-      height="600"
-      style="border: none; border-radius: 12px; overflow: hidden;">
+      height="324"
+      style="border: none; overflow: hidden;">
     </iframe>
 
       <div class="modal__body">
