--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </div>
         
       <div class="modal__body">
-        <iframe src="https://wise-raccoon-fq317w-dev-ed.trailblaze.lightning.force.com/survey/runtimeApp.app?surveyVersionId=0Ksbm000007TCszCAG&previewMode=true" width="100%" height="324" style="border: none; overflow: hidden;">
+        <iframe src="https://wise-raccoon-fq317w-dev-ed.trailblaze.my.site.com/survey/runtimeApp?invitationId=0Kibm0000002PFF&surveyName=customer_review_of_solar_panels&UUID=def120b5-aa2e-4ed6-8612-6135e4a458c7" width="100%" height="324" style="border: none; overflow: hidden;">
         </iframe>
       </div>
     </section>
@@ -206,7 +206,7 @@
 
   const formatted = `${day}/${month}/${year} ${hours}:${minutes}`;
 
-  console.log("Last deployment:", formatted);
+  console.log("Last refresh:", formatted);
 </script>
 
 
