added radius buttons

--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
     </label>
   </div>
 
+  <!-- RADIUSBUTTONS -->
+  <div class="modal-selector" id="modalSelector" role="radiogroup" aria-label="Escolha de formulário">
+  <button data-modal="modal1">Referência</button>
+  <button data-modal="modal2">Estrelas</button>
+  <button data-modal="modal3">Estrelas + Texto</button>
+  <button data-modal="modal4">Seletor deslizante</button>
+  <button data-modal="modal5">Matriz</button>
+</div>-->
 
 
 <script>
