--- a/index.html
+++ b/index.html
@@ -244,15 +244,32 @@
   </div>
 
   <!-- RADIUSBUTTONS -->
-  <div class="modal-selector" id="modalSelector" role="radiogroup" aria-label="Escolha de formulário">
-    <button data-modal="modal1">Referência</button>
-    <button data-modal="modal2">Estrelas</button>
-    <button data-modal="modal3">Estrelas + Texto</button>
-    <button data-modal="modal4">Seletor deslizante</button>
-    <button data-modal="modal5">Matriz</button>
-  </div>
+<div class="modal-selector" id="modalSelector" role="radiogroup" aria-label="Escolha de formulário">
+
+  <button class="selector-option" data-modal="modal1" aria-checked="false">
+    Referência
+  </button>
+
+  <button class="selector-option" data-modal="modal2" aria-checked="false">
+    Estrelas
+  </button>
+
+  <button class="selector-option" data-modal="modal3" aria-checked="false">
+    Estrelas + Texto
+  </button>
+
+  <button class="selector-option" data-modal="modal4" aria-checked="false">
+    Seletor deslizante
+  </button>
+
+    <button class="selector-option" data-modal="modal4" aria-checked="false">
+    Matriz
+  </button>
+
+</div>
 
 
+<!-- scripts -->
 <script>
   const now = new Date();
 
