--- a/index.html
+++ b/index.html
@@ -285,8 +285,51 @@
   console.log("Last refresh:", formatted);
 </script>
 
-
+<!-- script abertura modal novo-->
 <script>
+  const selector = document.getElementById("modalSelector");
+  const options = selector.querySelectorAll(".selector-option");
+  const modals = document.querySelectorAll(".modal-backdrop");
+
+  function clearSelection() {
+    options.forEach(opt => {
+      opt.classList.remove("is-selected");
+      opt.setAttribute("aria-checked", "false");
+    });
+  }
+
+  function closeAllModals() {
+    modals.forEach(m => m.classList.remove("show"));
+    selector.classList.remove("is-disabled");
+    clearSelection();
+  }
+
+  options.forEach(option => {
+    option.addEventListener("click", () => {
+      clearSelection();
+
+      option.classList.add("is-selected");
+      option.setAttribute("aria-checked", "true");
+
+      const modalId = option.dataset.modal;
+      document.getElementById(modalId).classList.add("show");
+
+      selector.classList.add("is-disabled");
+    });
+  });
+
+  document.querySelectorAll("[data-close]").forEach(btn => {
+    btn.addEventListener("click", closeAllModals);
+  });
+
+  modals.forEach(modal => {
+    modal.addEventListener("click", e => {
+      if (e.target === modal) closeAllModals();
+    });
+  });
+</script>
+
+<!-- script modal abertura antigo <script>
   const modal1 = document.getElementById("modalBackdrop");
   const modal2 = document.getElementById("modalBackdrop2");
 
@@ -337,7 +380,7 @@
     }
   });
 </script>
-
+-->
 
 </body>
 </html>
